name:                methuselah-generator
version:             0.1.0.0
synopsis:            Api generator for neovim.
description:         Api generator for neovim.
license:             MIT
license-file:        LICENSE
author:              Ben Edwards
maintainer:          edwards.benj@gmail.com
copyright:           Benjamin Edwards 2014
category:            None
build-type:          Simple
cabal-version:       >=1.10

executable methuselah
  main-is:
    Main.hs
  build-depends:
    base >=4.7 && <4.8,
    bytestring,
    cereal,
    containers,
    lens ==4.4.*,
    lens-aeson,
    messagepack ==0.2.*,
    text
  hs-source-dirs:
    src
  default-language:
    Haskell2010
